# hii-expansion

./: .gitignore  CLAUDE.md  README.md  TESTS.md  pyproject.toml
.github/workflows/: ci.yml
hii_expansion/: __init__.py  analytic.py  constants.py  hii_region.py  recombination.py
paper/: hii_expansion.bib  hii_expansion.tex
python/: check_modified_spitzer.py  find_solution.py  plot_classic_vs_modified.py  plot_constant_density.py  plot_cored_profile.py  plot_powerlaw.py  plot_ram_pressure.py  report_cored_stromgren.py
tests/: test_evolution.py  test_hii_region.py  test_recombination.py
